tentando melhorar performance

--- a/RinhaBack2024Q1/appsettings.json
+++ b/RinhaBack2024Q1/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "rinha": "Host=db;Port=3306;Database=rinha;User=root;Password=rootPass;Pooling=True;MaximumPoolSize=1000;DateTimeKind=Utc;ConnectionTimeout=180"
+    "rinha": "Host=db;Port=3306;Database=rinha;User=root;Password=rootPass;MinimumPoolSize=50;MaximumPoolSize=2000;DateTimeKind=Utc;ConnectionTimeout=60;"
   }
 }
